# ExperiPulse

./: .env.example  .gitignore  CLAUDE copy.md  CLAUDE.md  README.md  activate.sh  experiment_bot.db  pyproject.toml  requirements.txt  start_bot.py  start_server.py  test_mvp.py
.claude/: settings.local.json
bot/: telegram_bot.py
client/: setup.py
client/experiment_bot/: __init__.py
docker/: .dockerignore  .env.docker  DOCKER.md  Dockerfile  docker-compose.yml  docker-entrypoint.sh  test_docker_config.py
examples/: basic_usage.py
server/: api.py  database.py
